--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <h1>Mozilla is good!!</h1>
-    <img src="../images/ff.PNG" alt="The firefox here" width="200 px">
+    <img src="../images/ch.png" alt="The firefox here" width="200 px">
     <p>At Moz, <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
         they sought to be thinkers....</p>
     <ul>
